# Image-Tools

./: pyproject.toml
docs/: README.md
src/extract_icons/: __init__.py  extract_multiple_images_from_composite.py
src/extract_multiple_images_from_composite/: __init__.py  extract_multiple_images_from_composite.py
